# hemplate

./: .clang-format  .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE.md  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: coverage.cmake  install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  html.cpp
include/hemplate/: atom.hpp  attribute.hpp  classes.hpp  common.hpp  element.hpp  elementAtomic.hpp  elementBoolean.hpp  hemplate.hpp  html.hpp  rss.hpp  sitemap.hpp  streamable.hpp
source/: attribute.cpp  classes.cpp  common.cpp  element.cpp  hemplate.cpp
test/: CMakeLists.txt
test/source/: atom_test.cpp  attribute.cpp  attribute_list.cpp  classes_test.cpp  common_test.cpp  element.cpp  element_test.cpp  hemplate_test.cpp  html_test.cpp  rss_test.cpp  sitemap_test.cpp
